add styling, add delete feature

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,138 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  overflow: hidden;
+}
+
+body {
+  background: #74cacf; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #74cacf, #59bd95); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #74cacf,
+    #59bd95
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100vh;
+  font-family: 'Pacifico', cursive;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.navbar {
+  border-bottom: 2px solid black;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+/*Amplify Login and Header  */
+.amplify-section-header {
+  background-color: #a5a5b1 !important;
+}
+.amplify-nav-bar {
+  border: none !important;
+}
+.amplify-container {
+  color: red;
+}
+.main-header {
+  background: transparent;
+}
+.main-header-text {
   color: white;
+  text-align: center;
+}
+/*--Amplify Login  */
+
+/* Remove Scrollbar only webkit*/
+::-webkit-scrollbar {
+  display: none;
 }
 
-.App-title {
-  font-size: 1.5em;
+.playbutton {
+  width: 100%;
+  overflow: hidden;
+}
+.button-filename {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.filelists {
+  height: 100vh;
+  overflow: auto;
+}
+.filelist {
+  width: 30rem;
+  height: 3rem;
 }
 
-.App-intro {
-  font-size: large;
+.uploadform {
+  padding: 20px;
+  border: 7px solid black;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.playlist {
+  border-bottom: 3px solid black;
+  line-height: 0.8;
+}
+.videoplayer {
+  position: relative;
+  width: 60vw;
+  height: 70vh;
+}
+
+.toolTip {
+  position: relative;
+  display: inline-block;
+}
+
+.toolTip .toolTiptext {
+  visibility: hidden;
+  width: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
+  text-align: left;
+  /* padding: 5px 0; */
+  /* border-radius: 6px; */
+
+  position: fixed;
+  z-index: 1;
+}
+.toolTip:hover .toolTiptext {
+  visibility: visible;
 }
